# ogl_project_base

./: CMakeLists.txt  readme.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cxx
